axum-macros/tests/debug_handler/fail/wrong_return_type.stderr
error[E0277]: the trait bound `bool: IntoResponse` is not satisfied
 --> tests/debug_handler/fail/wrong_return_type.rs:4:23
  |
4 | async fn handler() -> bool {
  |                       ^^^^ the trait `IntoResponse` is not implemented for `bool`
  |
  = help: the following other types implement trait `IntoResponse`:
            Box<str>
            Box<[u8]>
            axum::body::Bytes
            Body
            axum::extract::rejection::FailedToBufferBody
            axum::extract::rejection::LengthLimitError
            axum::extract::rejection::UnknownBodyError
            bytes::bytes_mut::BytesMut
          and $N others
note: required by a bound in `__axum_macros_check_handler_into_response::{closure#0}::check`
 --> tests/debug_handler/fail/wrong_return_type.rs:4:23
  |
4 | async fn handler() -> bool {
  |                       ^^^^ required by this bound in `check`
